Fixing layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,7 @@ html {
 #wrap{
   /*font-family: 'Play', sans-serif;*/
 	margin-bottom: 15%;
+	width: 100%;
 }
 #jumbo{
                     background-image: url("../images/cooking-header.jpeg");
